Bug 415757 ? RemovePagesFromHost could delete wrong items/annotation (r=dietrich, a=schrep)